Commit experiements folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ birch_PCA_model.joblib
 kmeans_PCA_model.joblib
 app.py
 template_branche_Abdelhak.ipynb
-experiments\__init__.py
+experiments/__init__.py
